--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
+    "localbase": "^0.7.5",
     "quasar": "^1.0.0"
   },
   "devDependencies": {
